# mock-vod-data-platform

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  download_libs.sh  generate_content.py  generate_events.py  pyproject.toml  read_parquet.py  requirements.txt
airflow/: Dockerfile  docker-compose.yaml
airflow/config/: airflow.cfg
airflow/dags/: my_spark_job.py  spark_submit.py  starter.py
airflow/dags/spark_jobs/: bronze.py
conf/: spark-defaults.conf
src/vod_platform/jobs/: bronze.py  bronze_data_quality_checks.py  manual_events_ingestion.py  silver.py
src/vod_platform/sql/: create_silver_tables.py
src/vod_platform/utils/: spark_session.py
