[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vod_data_platform"
version = "0.1.0"
description = "Data platform for the VOD service."
requires-python = ">=3.11, <3.12"  # Specify Python version here

dependencies = [
    "pyspark==3.5.6", # Exactly version 3.5.0
    "pandas ~= 2.2.0", # Compatible with version 2.2 (e.g., 2.2.1, 2.2.2, but not 2.3)
    "boto3 >= 1.34.0", # Version 1.34.0 or newer
    "faker~=25.0",
    "pyarrow~=15.0",
    "marimo>=0.14.17",
    "apache-airflow-task-sdk>=1.0.4",
]
